--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,13 @@
     <groupId>Borman</groupId>
     <artifactId>SQLCmd</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+    <dependencies>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>RELEASE</version>
+        </dependency>
+    </dependencies>
     <build>
         <plugins>
             <plugin>
