--- a/pom.xml
+++ b/pom.xml
@@ -7,13 +7,8 @@
     <groupId>Borman</groupId>
     <artifactId>SQLCmd</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <dependencies>
-        <dependency>
-            <groupId>org.postgresql</groupId>
-            <artifactId>postgresql</artifactId>
-            <version>RELEASE</version>
-        </dependency>
-    </dependencies>
+
+
     <build>
         <plugins>
             <plugin>
@@ -28,5 +23,29 @@
         </plugins>
     </build>
 
+
+    <properties>
+        <postgresql.version>9.4.1207</postgresql.version>
+        <junit.version>4.12</junit.version>
+        <mockito.version>1.10.19</mockito.version>
+        <sirocco.version>1.0</sirocco.version>
+    </properties>
+    <dependencies>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>${postgresql.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>${junit.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>${mockito.version}</version>
+        </dependency>
+    </dependencies>
 
 </project>
